# URL_Shortener

./: .env  .gitignore  README.md  main.py  pyproject.toml  test_base62.py  test_url_service.py
Frontend/: index.html  script.js  style.css
api/: models.py
config/: settings.py
core/: Base62ED.py  ED.py  __init__.py
database/: __init__.py  supabase_client.py
services/: url_service.py
utils/: base62.py
