[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.4",
    "python-env>=1.0.0",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "supabase>=2.27.3",
    "uvicorn>=0.40.0",
]
